plugins/kotlin/idea/tests/testData/gradle/hmppImportAndHighlighting/hmppLibAndConsumer/lib-and-app/lib/src/commonTest/kotlin/LibCommonTest.kt
package com.h0tk3y.hmpp.klib.demo

import kotlin.test.Test
import kotlin.test.assertTrue

class <!LINE_MARKER("descr='Run Test'")!>LibCommonTest<!> {
    @Test
    fun <!LINE_MARKER("descr='Run Test'")!>testLibExpect<!>() {
        LibCommonMainExpect().libCommonMainExpectFun()
    }
}